docs(spring): RequestMappingMessageConversionIntegrationTests 2/160 HTTP 500 residual investigated, does NOT reproduce on current dev (5.5)
Section 5 flagged 2 HTTP 500s (Reactor Netty + Tomcat backends) as not yet
root-caused. Exhaustive per-test-invocation verification (160/160 method x
backend combinations run individually via a custom JUnit Platform launcher)
found zero failures on dev tip 6178c36f/704aedd3. Most likely already fixed
as a side effect of 19a5025f (Thread.getId) and/or 9850617b (executor-submit
Netty redispatch), both of which landed after section 5s original report.
No code change needed; regression suites (native-builtins 3000/0,
vm 2199/17-matches-documented-baseline) clean.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>